Balkan Bot v1.0.0 Adapted from flairchange_bot's code

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "flairchange_bot",
-    "version": "3.3.2",
-    "description": "Detecting user flair changes in r/PoliticalCompassMemes",
+    "name": "balkan_bot",
+    "version": "1.0.0",
+    "description": "Replacing AutoModerator in r/balkans_irl",
     "main": "./build/index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/ornato-t/flair-change-is-cringe.git"
+        "url": "git+https://github.com/ornato-t/balkan_bot.git"
     },
     "keywords": [
         "reddit",
@@ -19,20 +19,17 @@
     "author": "ornato-t",
     "license": "GPL-3.0-or-later",
     "bugs": {
-        "url": "https://github.com/ornato-t/flair-change-is-cringe/issues"
+        "url": "https://github.com/ornato-t/balkan_bot/issues"
     },
-    "homepage": "https://github.com/ornato-t/flair-change-is-cringe#readme",
+    "homepage": "https://github.com/ornato-t/balkan_bot#readme",
     "dependencies": {
         "dotenv": "^16.0.0",
-        "mongodb": "^4.5.0",
-        "node-cron": "^3.0.2",
         "snoostorm": "^1.5.2",
-        "snoowrap": "^1.23.0",
-        "yaml": "^2.2.1"
+        "snoowrap": "^1.23.0"
     },
     "type": "module",
     "devDependencies": {
-        "@types/node-cron": "^3.0.7",
+        "@types/node": "^18.15.11",
         "@typescript-eslint/eslint-plugin": "^5.48.0",
         "@typescript-eslint/parser": "^5.48.0",
         "eslint": "^8.31.0",
